[package]
name = "rxing"
version = "0.2.15"
description="A rust port of the zxing barcode library."
license="Apache-2.0"
repository="https://github.com/hschimke/rxing"
keywords = ["barcode", "2d_barcode", "1d_barcode", "barcode_reader", "barcode_writer"]
edition = "2021"
exclude = [
    "test_resources/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
fancy-regex = "0.10"
once_cell = "1.17.0"
encoding = "0.2"
rand = "0.8.5"
urlencoding = "2.1.2"
uriparse = "0.6.4"
chrono = "0.4.23"
chrono-tz = "0.8"
image = {version = "0.24", optional = true}
imageproc = {version = "0.23", optional = true}
unicode-segmentation = "1.10"
codepage-437 = "0.1.0"
rxing-one-d-proc-derive = "0.3"
#rxing-one-d-proc-derive = {path ="../rxing-one-d-proc-derive"}
num = "0.4.0"
svg = {version = "0.13", optional = true}
resvg = {version = "0.28.0", optional = true, default-features=false}

[dev-dependencies]
java-properties = "1.4.1"
java-rand = "0.2.0"

[features]
default = []
image = ["dep:image", "dep:imageproc"]
allow_forced_iso_ied_18004_compliance = []
svg_write = ["dep:svg"]
svg_read = ["dep:resvg", "image"]
