[package]
name = "rxing"
version = "0.5.8"
description="A rust port of the zxing barcode library."
license="Apache-2.0"
repository="https://github.com/rxing-core/rxing"
keywords = ["barcode", "barcode_2d", "barcode_1d", "barcode_reader", "barcode_writer"]
edition = "2021"
exclude = [
    "test_resources/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10"
fancy-regex = "0.13"
once_cell = "1.19"
encoding = "0.2"
urlencoding = "2.1.3"
uriparse = "0.6.4"
chrono = "0.4.35"
chrono-tz = "0.8"
image = {version = "0.25.0", optional = true, default-features = false}
imageproc = {version = "0.24", optional = true}
unicode-segmentation = "1.11"
codepage-437 = "0.1.0"
rxing-one-d-proc-derive = {version = "0.5.3", path ="./crates/one-d-proc-derive"}
num = "0.4.1"
svg = {version = "0.16.0", optional = true}
resvg = {version = "0.40.0", optional = true, default-features=false}
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
thiserror = "1.0.58"
multimap = "0.10.0"
bit_reverse = "0.1.8"

[dev-dependencies]
java-properties = "2.0"
java-rand = "0.2.0"
rand = "0.8.5"
criterion = "0.5"

[features]
default = ["image", "client_support", "image_formats"]
#/// Enable features required for image manipulation and reading.
image = ["dep:image", "dep:imageproc"]
image_formats = [
    "image",
    "image/gif",
    "image/jpeg",
    "image/ico",
    "image/png",
    "image/pnm",
    "image/tga",
    "image/tiff",
    "image/webp",
    "image/bmp",
    "image/hdr",
    "image/dds",
    "image/qoi",
    "image/avif",
    "image/exr",
    "image/ff",
]

#/// Allows the ability to force ISO/IED 18004 compliance.
#/// Leave disabled unless specificially needed.
allow_forced_iso_ied_18004_compliance = []

#/// Enable support for writing SVG files
svg_write = ["dep:svg"]

#/// Enable support for reading SVG files
svg_read = ["dep:resvg", "image"]

#/// Enable support building this module in WASM
wasm_support = ["chrono/wasmbind"]

#/// Enable experimental features, risky.
experimental_features = []

#/// Adds support for serde Serialize and Deserialize for outward facing structs
serde = ["dep:serde"]

#/// Adds otsu binarizer support using imageproc
otsu_level = ["image"]

#/// Adds "client" features do decode many common data formats found in barcodes
client_support = []

[workspace]
members = [
    "crates/one-d-proc-derive",
    "crates/cli"
]

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
