[package]
name = "rxing-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2"
once_cell = "1.17.1"
unicode-segmentation = "1.10"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
image = {version = "0.24", optional = true}
imageproc = {version = "0.23", optional = true}
svg = {version = "0.13", optional = true}
resvg = {version = "0.28.0", optional = true, default-features=false}

[dev-dependencies]
rand = "0.8.5"

[features]
serde = ["dep:serde"]
image = ["dep:image", "dep:imageproc"]
wasm_support = []
svg_write = ["dep:svg"]
svg_read = ["dep:resvg", "image"]
experimental_features = []
otsu_level = []